// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> Render component 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #2C698D;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 190px 0 0;
  -ms-flex: 190px 0 0;
  flex: 190px 0 0;
  height: 190px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 190px;
}

<figure
  className="c0"
  size={240}
/>
`;

exports[`<Avatar /> Render component with src prop 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #2C698D;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 190px 0 0;
  -ms-flex: 190px 0 0;
  flex: 190px 0 0;
  height: 190px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 190px;
}

.c1 {
  border-radius: 50%;
  border: 2px solid #F6FAFD;
  display: inline-block;
  height: 184px;
  width: 184px;
}

<figure
  className="c0"
  size={240}
>
  <img
    alt="Foto de Fernando Moreira Costa"
    className="c1"
    height={234}
    loading="lazy"
    src="/images/avatar.png"
    width={234}
  />
</figure>
`;
